--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Über uns, Deutschlehrer, Sprachschule Berlin, Lehrmethoden, Team">
     <meta name="author" content="Labyrinthula Deutschkurse">
     <meta name="theme-color" content="#6366F1">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <title>Über uns - Labyrinthula Deutschkurse</title>
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -17,8 +18,7 @@
     <nav class="navbar">
         <div class="container">
             <a href="index.html" class="logo">
-                <span class="logo-text">Labyrinthula</span>
-                <span class="logo-subtitle">Deutschkurse</span>
+                <img src="images/logo-lab.png" alt="Labyrinthula Deutschkurse Logo">
             </a>
             <button class="nav-toggle" id="navToggle">
                 <span></span>
@@ -33,7 +33,6 @@
             </ul>
         </div>
     </nav>
-
     <!-- Hero Section -->
     <section class="page-hero">
         <div class="container">
@@ -52,26 +51,31 @@
                     <p>Unser Ziel ist es, nicht nur Sprachkenntnisse zu vermitteln, sondern auch kulturelles Verständnis zu fördern und unseren Schülern das Selbstvertrauen zu geben, sich in deutschsprachigen Umgebungen wohlzufühlen.</p>
                     <div class="mission-values">
                         <div class="value-item">
-                            <span class="value-icon">🎯</span>
+                            <div class="value-icon">
+                                <i class="fas fa-award"></i>
+                            </div>
                             <h4>Exzellenz</h4>
                             <p>Höchste Qualität in jedem Kurs</p>
                         </div>
                         <div class="value-item">
-                            <span class="value-icon">💡</span>
+                            <div class="value-icon">
+                                <i class="fas fa-lightbulb"></i>
+                            </div>
                             <h4>Innovation</h4>
                             <p>Moderne Lehrmethoden</p>
                         </div>
                         <div class="value-item">
-                            <span class="value-icon">🤝</span>
+                            <div class="value-icon">
+                                <i class="fas fa-hands-helping"></i>
+                            </div>
                             <h4>Unterstützung</h4>
                             <p>Persönliche Betreuung</p>
                         </div>
                     </div>
                 </div>
                 <div class="mission-image">
-                    <div class="image-placeholder">
-                        [Bild: Moderne Sprachschule mit offener, einladender Atmosphäre]
-                    </div>
+                    <div class="mission-image-background"></div>
+                    <img src="images/mission-image.jpg" alt="Moderne Sprachschule mit offener, einladender Atmosphäre">
                 </div>
             </div>
         </div>
@@ -303,7 +307,9 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column">
-                    <h3>Labyrinthula</h3>
+                    <a href="index.html" class="logo">
+                        <img src="images/logo-lab.png" alt="Labyrinthula Deutschkurse Logo">
+                    </a>
                     <p>Ihre professionelle Sprachschule für Deutschkurse. Wir begleiten Sie auf Ihrem Weg zur deutschen Sprache.</p>
                 </div>
                 <div class="footer-column">
@@ -319,7 +325,7 @@
                     <h4>Kontakt</h4>
                     <p>📍 Friedrichstraße 123<br>
                     10117 Berlin<br>
-                    📞 +49 30 12345678<br>
+                    📞 +49 30 47645645<br>
                     ✉️ info@labyrinthula.com</p>
                 </div>
                 <div class="footer-column">
