--- a/agb.html
+++ b/agb.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Allgemeine Geschäftsbedingungen (AGB) von Labyrinthula Deutschkurse. Teilnahmebedingungen für unsere Sprachkurse.">
+    <meta name="theme-color" content="#6366F1">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <title>AGB - Labyrinthula</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,8 +14,7 @@
     <nav class="navbar">
         <div class="container">
             <a href="index.html" class="logo">
-                <span class="logo-text">Labyrinthula</span>
-                <span class="logo-subtitle">Deutschkurse</span>
+                <img src="images/logo-lab.png" alt="Labyrinthula Deutschkurse Logo">
             </a>
             <button class="nav-toggle" id="navToggle">
                 <span></span>
@@ -119,7 +120,7 @@
                 Friedrichstraße 123<br>
                 10117 Berlin<br>
                 E-Mail: info@labyrinthula.com<br>
-                Telefon: +49 30 12345678
+                Telefon: +49 30 47645645
             </p>
         </div>
     </section>
@@ -129,7 +130,9 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column">
-                    <h3>Labyrinthula</h3>
+                    <a href="index.html" class="logo">
+                        <img src="images/logo-lab.png" alt="Labyrinthula Deutschkurse Logo">
+                    </a>
                     <p>Ihre professionelle Sprachschule für Deutschkurse.</p>
                 </div>
                 <div class="footer-column">
@@ -145,7 +148,7 @@
                     <h4>Kontakt</h4>
                     <p>📍 Friedrichstraße 123<br>
                     10117 Berlin<br>
-                    📞 +49 30 12345678<br>
+                    📞 +49 30 47645645<br>
                     ✉️ info@labyrinthula.com</p>
                 </div>
                 <div class="footer-column">
