--- a/datenschutz.html
+++ b/datenschutz.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Datenschutzerklärung von Labyrinthula Deutschkurse. Informationen zum Umgang mit Ihren personenbezogenen Daten.">
+    <meta name="theme-color" content="#6366F1">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <title>Datenschutzerklärung - Labyrinthula</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,8 +14,7 @@
     <nav class="navbar">
         <div class="container">
             <a href="index.html" class="logo">
-                <span class="logo-text">Labyrinthula</span>
-                <span class="logo-subtitle">Deutschkurse</span>
+                <img src="images/logo-lab.png" alt="Labyrinthula Deutschkurse Logo">
             </a>
             <button class="nav-toggle" id="navToggle">
                 <span></span>
@@ -43,7 +44,7 @@
                 10117 Berlin<br>
                 Deutschland<br>
                 E-Mail: datenschutz@labyrinthula.com<br>
-                Telefon: +49 30 12345678
+                Telefon: +49 30 47645645
             </p>
             
             <h2>2. Erhebung und Speicherung personenbezogener Daten</h2>
@@ -99,7 +100,7 @@
             <p>Bei Fragen zum Datenschutz wenden Sie sich bitte an unseren Datenschutzbeauftragten:</p>
             <p>
                 E-Mail: datenschutz@labyrinthula.com<br>
-                Telefon: +49 30 12345678
+                Telefon: +49 30 47645645
             </p>
         </div>
     </section>
@@ -109,7 +110,9 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column">
-                    <h3>Labyrinthula</h3>
+                    <a href="index.html" class="logo">
+                        <img src="images/logo-lab.png" alt="Labyrinthula Deutschkurse Logo">
+                    </a>
                     <p>Ihre professionelle Sprachschule für Deutschkurse.</p>
                 </div>
                 <div class="footer-column">
@@ -125,7 +128,7 @@
                     <h4>Kontakt</h4>
                     <p>📍 Friedrichstraße 123<br>
                     10117 Berlin<br>
-                    📞 +49 30 12345678<br>
+                    📞 +49 30 47645645<br>
                     ✉️ info@labyrinthula.com</p>
                 </div>
                 <div class="footer-column">
