--- a/impressum.html
+++ b/impressum.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Impressum von Labyrinthula Deutschkurse. Gesetzliche Pflichtangaben und Kontaktinformationen.">
+    <meta name="theme-color" content="#6366F1">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <title>Impressum - Labyrinthula</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,8 +14,7 @@
     <nav class="navbar">
         <div class="container">
             <a href="index.html" class="logo">
-                <span class="logo-text">Labyrinthula</span>
-                <span class="logo-subtitle">Deutschkurse</span>
+                <img src="images/logo-lab.png" alt="Labyrinthula Deutschkurse Logo">
             </a>
             <button class="nav-toggle" id="navToggle">
                 <span></span>
@@ -50,8 +51,7 @@
             
             <h2>Kontakt</h2>
             <p>
-                Telefon: +49 30 12345678<br>
-                Telefax: +49 30 12345679<br>
+                Telefon: +49 30 47645645<br>
                 E-Mail: info@labyrinthula.com<br>
                 Website: www.labyrinthula.com
             </p>
@@ -143,7 +143,9 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column">
-                    <h3>Labyrinthula</h3>
+                    <a href="index.html" class="logo">
+                        <img src="images/logo-lab.png" alt="Labyrinthula Deutschkurse Logo">
+                    </a>
                     <p>Ihre professionelle Sprachschule für Deutschkurse.</p>
                 </div>
                 <div class="footer-column">
@@ -159,7 +161,7 @@
                     <h4>Kontakt</h4>
                     <p>📍 Friedrichstraße 123<br>
                     10117 Berlin<br>
-                    📞 +49 30 12345678<br>
+                    📞 +49 30 47645645<br>
                     ✉️ info@labyrinthula.com</p>
                 </div>
                 <div class="footer-column">
