--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Kontakt, Deutschkurs Berlin, Anmeldung, Beratung, Sprachschule Kontakt">
     <meta name="author" content="Labyrinthula Deutschkurse">
     <meta name="theme-color" content="#6366F1">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <title>Kontakt - Labyrinthula Deutschkurse Berlin</title>
     <!-- Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -17,8 +18,7 @@
     <nav class="navbar">
         <div class="container">
             <a href="index.html" class="logo">
-                <span class="logo-text">Labyrinthula</span>
-                <span class="logo-subtitle">Deutschkurse</span>
+                <img src="images/logo-lab.png" alt="Labyrinthula Deutschkurse Logo">
             </a>
             <button class="nav-toggle" id="navToggle">
                 <span></span>
@@ -63,7 +63,7 @@
                         <div class="contact-icon"><i class="fas fa-phone"></i></div>
                         <div class="contact-details">
                             <h3>Telefon</h3>
-                            <p>+49 30 12345678<br>
+                            <p>+49 30 47645645<br>
                             Mo-Fr: 9:00-18:00 Uhr<br>
                             Sa: 10:00-14:00 Uhr</p>
                         </div>
@@ -199,7 +199,7 @@
                     <ul class="hours-list">
                         <li><span>Montag - Freitag:</span> <strong>9:00 - 18:00 Uhr</strong></li>
                         <li><span>Samstag:</span> <strong>10:00 - 14:00 Uhr</strong></li>
-                        <li><span>Hotline:</span> <strong>+49 30 12345678</strong></li>
+                        <li><span>Hotline:</span> <strong>+49 30 47645645</strong></li>
                     </ul>
                 </div>
             </div>
@@ -295,7 +295,9 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-column">
-                    <h3>Labyrinthula</h3>
+                    <a href="index.html" class="logo">
+                        <img src="images/logo-lab.png" alt="Labyrinthula Deutschkurse Logo">
+                    </a>
                     <p>Ihre professionelle Sprachschule für Deutschkurse. Wir begleiten Sie auf Ihrem Weg zur deutschen Sprache.</p>
                 </div>
                 <div class="footer-column">
@@ -311,7 +313,7 @@
                     <h4>Kontakt</h4>
                     <p>📍 Friedrichstraße 123<br>
                     10117 Berlin<br>
-                    📞 +49 30 12345678<br>
+                    📞 +49 30 47645645<br>
                     ✉️ info@labyrinthula.com</p>
                 </div>
                 <div class="footer-column">
