--- a/agb.html
+++ b/agb.html
@@ -37,7 +37,7 @@
             <p style="color: var(--text-light); margin-bottom: 2rem;">Stand: Januar 2024</p>
             
             <h2>§ 1 Geltungsbereich</h2>
-            <p>(1) Diese Allgemeinen Geschäftsbedingungen (nachfolgend "AGB") gelten für alle Verträge über die Teilnahme an Sprachkursen, die zwischen der Labyrinthula GmbH (nachfolgend "Sprachschule") und den Kursteilnehmern (nachfolgend "Teilnehmer") geschlossen werden.</p>
+            <p>(1) Diese Allgemeinen Geschäftsbedingungen (nachfolgend "AGB") gelten für alle Verträge über die Teilnahme an Sprachkursen, die zwischen der Labyrinthula (nachfolgend "Sprachschule") und den Kursteilnehmern (nachfolgend "Teilnehmer") geschlossen werden.</p>
             <p>(2) Abweichende, entgegenstehende oder ergänzende Allgemeine Geschäftsbedingungen werden, selbst bei Kenntnis, nicht Vertragsbestandteil, es sei denn, ihrer Geltung wird ausdrücklich schriftlich zugestimmt.</p>
             
             <h2>§ 2 Vertragsschluss und Anmeldung</h2>
@@ -116,7 +116,7 @@
             <h2>Kontakt bei Fragen</h2>
             <p>Bei Fragen zu unseren AGB wenden Sie sich bitte an:</p>
             <p>
-                Labyrinthula GmbH<br>
+                Labyrinthula <br>
                 Friedrichstraße 123<br>
                 10117 Berlin<br>
                 E-Mail: info@labyrinthula.com<br>
