--- a/datenschutz.html
+++ b/datenschutz.html
@@ -39,7 +39,7 @@
             <h2>1. Verantwortlicher</h2>
             <p>Verantwortlich für die Datenverarbeitung auf dieser Website ist:</p>
             <p>
-                Labyrinthula GmbH<br>
+                Labyrinthula <br>
                 Friedrichstraße 123<br>
                 10117 Berlin<br>
                 Deutschland<br>
