--- a/datenschutz.html
+++ b/datenschutz.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
             <a href="index.html" class="logo">
@@ -30,7 +29,6 @@
         </div>
     </nav>
 
-    <!-- Content -->
     <section class="legal-content" style="padding: 5rem 0;">
         <div class="container" style="max-width: 800px;">
             <h1>Datenschutzerklärung</h1>
@@ -105,7 +103,6 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-grid">
@@ -145,6 +142,19 @@
             </div>
         </div>
     </footer>
+    <div id="cookieConsent" class="cookie-consent">
+        <div class="container">
+            <div style="display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 1rem;">
+                <div style="flex: 1;">
+                    <p>Diese Website verwendet Cookies, um Ihre Erfahrung zu verbessern. Durch die weitere Nutzung stimmen Sie unserem <a href="datenschutz.html">Datenschutz</a> zu.</p>
+                </div>
+                <div style="flex-shrink: 0;">
+                    <button class="btn btn-primary" id="acceptCookies">Akzeptieren</button>
+                    <a href="datenschutz.html" class="btn btn-secondary" style="margin-left: 10px;">Mehr Infos</a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="js/main.js"></script>
 </body>
